--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  fonts:
+    - family: clarissans
+      fonts:
+        - asset: fonts/clarissans.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
