--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,10 +45,11 @@ android {
         applicationId "com.example.uplace"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19//flutter.minSdkVersion <-- removi e troquei por 19 TROCAS
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true //antes não tinha isso TROCAS
     }
 
     buildTypes {
