--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   font_awesome_flutter: ^10.6.0
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
