--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.24.2
   font_awesome_flutter: ^10.6.0
   cloud_firestore: ^4.13.6
+  firebase_auth: ^4.15.3
 
 dev_dependencies:
   flutter_test:
