All models implemmented, need validation on User x Consumer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
