AutoSizeText 3.0.0 added to bugfix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
   decimal: ^2.3.3
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
